--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -4,6 +4,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-offset-3 col-md-6">
+         <!-- Add Book Page -->
           <% if (title == 'Add Book') { %>
             <h1><%= title %></h1>
               <form class="form" method="post">
@@ -33,6 +34,8 @@
               </form>
            <% } %>  
 
+           
+          <!-- Edit Book Page -->
           <% if (title == 'Edit Book') { %>
             <h1><%= title %></h1>
               <form class="form" method="post">
