--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -5,9 +5,7 @@
       <div class="row">
         <div class="col-md-offset-1 col-md-10">
           <h3>Favourite Books List </h3>
-          <!-- ------------------------ -->
-          <!-- FIX THE ADD BUTTON BELOW -->
-          <!-- ------------------------ -->
+          <!-- ADD BUTTON -->
           <a href="books/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add a book</a>
           <br>
           <div class="table-responsive">
@@ -30,12 +28,12 @@
                   <td class="text-center">$<%= books[count].Price %></td>
                   <td class="text-center"><%= books[count].Author %></td>
                   <td class="text-center"><%= books[count].Genre %></td>
-
+                <!-- EDIT BUTTON -->
                   <td class="text-center">
                     <a href="/books/<%= books[count]._id %>" class="bt btn-primary btn-sm">
                     <i class="fas fa-pencil-alt"></i> Edit</a>
                   </td>
-
+                <!-- DELETE BUTTON -->
                   <td class="text-center">
                     <a href="/books/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm">
                     <i class="fas fa-trash-alt"></i> Delete</a>
