--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -31,12 +31,12 @@
                 <!-- EDIT BUTTON -->
                   <td class="text-center">
                     <a href="/books/<%= books[count]._id %>" class="bt btn-primary btn-sm">
-                    <i class="fas fa-pencil-alt"></i> Edit</a>
+                    <i class="fas fa-pencil"></i> Edit</a>
                   </td>
                 <!-- DELETE BUTTON -->
                   <td class="text-center">
                     <a href="/books/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm">
-                    <i class="fas fa-trash-alt"></i> Delete</a>
+                    <i class="fas fa-trash"></i> Delete</a>
                   </td>
                 </tr>
                 <% } %>
