--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -31,12 +31,12 @@
                 <!-- EDIT BUTTON -->
                   <td class="text-center">
                     <a href="/books/<%= books[count]._id %>" class="bt btn-primary btn-sm">
-                    <i class="fa-solid fa-pen-to-square"></i> Edit</a>
+                     Edit</a>
                   </td>
                 <!-- DELETE BUTTON -->
                   <td class="text-center">
-                    <a href="/books/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm">
-                    <i class="fa-solid fa-trash"></i> Delete</a>
+                    <a href="/books/delete/<%= books[count]._id %>" class="bt btn-danger btn-sm">
+                     Delete</a>
                   </td>
                 </tr>
                 <% } %>
