--- a/client/Content/app.css
+++ b/client/Content/app.css
@@ -2,4 +2,19 @@
 body {
   padding-bottom: 70px;
   }
-
+  .navbar .navbar-brand img {
+    padding-top: 10px;
+    padding-bottom: 0px;
+    height: 100%;
+    width: auto;
+    
+  }
+  .navbar .navbar-brand {
+    padding: 0 10px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  
