--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -14,16 +14,17 @@
 
   <nav class="navbar navbar-inverse" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
+    <div class="navbar-header" id="nav">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><i class="fa fa-bookmark-o"></i> My Favourite Books</a>
+      <a class="navbar-brand" href="/"><img if="logo" src="/Assets/images/logo.jpg" alt="logo" width="100" height="40" ></a>
+      <a class="navbar-brand" href="/"> Web22 Survey App</a>
     </div>
-
+    
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -33,12 +34,12 @@
           <li><a href="/"><i class="fa fa-home fa-lg"></i> Home</a></li>
         <% } %>
 
-          <% if(title == "books") { %>
-          <li class="active"><a href="/books"><i class="fa fa-book fa-lg">
-          </i> Books List</a></li>
+          <% if(title == "surveys") { %>
+          <li class="active"><a href="/surveys"><i class="fa fa-survey fa-lg">
+          </i> Survey List</a></li>
           <% } else { %>
-            <li><a href="/books"><i class="fa fa-book fa-lg">
-            </i> Books List</a></li>
+            <li><a href="/surveys"><i class="fa fa-survey fa-lg">
+            </i> Survey List</a></li>
           <% } %>
 
       </ul>
