--- a/server/views/surveys/active.ejs
+++ b/server/views/surveys/active.ejs
@@ -4,38 +4,39 @@
     <div class="container">
       <div class="row">
         <div class="col-md-offset-1 col-md-10">
-          <h3>Favourite Books List </h3>
-          <!-- ADD BUTTON -->
-          <a href="books/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add a book</a>
+          <h3>Active Surveys </h3>
+          
           <br>
           <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
               <thead>
                 <tr>
                   <th>Title</th>
-                  <th class="text-center">Price</th>
-                  <th class="text-center">Author</th>
-                  <th class="text-center">Genre</th>
+                  <th class="text-center">Date</th>
+                  <th class="text-center">Description</th>
+                  
+                  
                   <th class="text-center"></th>
                   <th class="text-center"></th>
                 </tr>
                 </thead>
                 <tbody>
                 <!-- Template Row -->
-                <% for (let count = 0; count < books.length; count++) { %>
+                <% for (let count = 0; count < surveys.length; count++) { %>
                 <tr>
-                  <td><%= books[count].Title %></td>
-                  <td class="text-center">$<%= books[count].Price %></td>
-                  <td class="text-center"><%= books[count].Author %></td>
-                  <td class="text-center"><%= books[count].Genre %></td>
-                <!-- EDIT BUTTON -->
+                  <td><%= surveys[count].Title %></td>
+                  <td class="text-center"><%= surveys[count].Date %></td>
+                  <td class="text-center"><%= surveys[count].Description %></td>
+                  
+                  
+                <!-- ANSWER BUTTON -->
                   <td class="text-center">
-                    <a href="/books/<%= books[count]._id %>" class="bt btn-primary btn-sm">
-                     Edit</a>
+                    <a href="/surveys/answer/<%= surveys[count]._id %>" class="bt btn-primary btn-sm">
+                     Answer Survey</a>
                   </td>
                 <!-- DELETE BUTTON -->
                   <td class="text-center">
-                    <a href="/books/delete/<%= books[count]._id %>" class="bt btn-danger btn-sm">
+                    <a href="/surveys/delete/<%= surveys[count]._id %>" class="bt btn-danger btn-sm">
                      Delete</a>
                   </td>
                 </tr>
@@ -51,5 +52,3 @@
     </div>
 
 <% include ../partials/footer.ejs %>
-
-
